# tree-sitter-aphelion

./: CMakeLists.txt  Cargo.toml  LICENSE.md  Makefile  Package.swift  README.md  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  package-lock.json  package.json  pom.xml  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-aphelion.pc.in
bindings/c/tree_sitter/: tree-sitter-aphelion.h
bindings/go/: binding.go  binding_test.go
bindings/java/main/io/github/treesitter/jtreesitter/aphelion/: TreeSitterAphelion.java
bindings/java/test/: TreeSitterAphelionTest.java
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_aphelion/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAphelionTests/: TreeSitterAphelionTests.swift
bindings/zig/: root.zig  test.zig
queries/aphelion/: highlights.scm
src/: grammar.json  node-types.json  parser.c
