[package]
name = "tree-sitter-aphelion"
description = "Tree sitter grammar for Aphel64 assembly"
version = "0.1.0"
authors = ["Nick Bors <nick@nickbors.cc>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "aphelion"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/nick-bors/tree-sitter-aphelion.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.5"
